[gd_scene load_steps=2 format=3 uid="uid://c05e5tufkx2ub"]

[ext_resource type="Script" uid="uid://c31n6qcrlnojt" path="res://Scenes/options.gd" id="1_prnvy"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_prnvy")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1918.0
offset_bottom = 1080.0
color = Color(0.400698, 0.400698, 0.400698, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = -33.0
offset_right = 51.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MenuButton" type="MenuButton" parent="VBoxContainer"]
layout_mode = 2
switch_on_hover = true
item_count = 10
popup/item_0/text = "Team1"
popup/item_0/id = 0
popup/item_1/text = "Team2"
popup/item_1/id = 1
popup/item_2/text = "Team3"
popup/item_2/id = 2
popup/item_3/text = "Team4"
popup/item_3/id = 3
popup/item_4/text = "team5"
popup/item_4/id = 4
popup/item_5/text = "Team6"
popup/item_5/id = 5
popup/item_6/text = "Team7"
popup/item_6/id = 6
popup/item_7/text = "Team8"
popup/item_7/id = 7
popup/item_8/text = "Team9"
popup/item_8/id = 8
popup/item_9/text = "Team10"
popup/item_9/id = 9

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Team"

[node name="Primary" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Primary" type="Label" parent="VBoxContainer/Primary"]
layout_mode = 2
text = "Primary:"

[node name="PrimaryButton" type="ColorPickerButton" parent="VBoxContainer/Primary"]
layout_mode = 2
text = "Team
"

[node name="Box" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Box" type="Label" parent="VBoxContainer/Box"]
layout_mode = 2
text = "Box:"

[node name="BoxButton" type="ColorPickerButton" parent="VBoxContainer/Box"]
layout_mode = 2
text = "Team
"

[node name="Outline" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Outline" type="Label" parent="VBoxContainer/Outline"]
layout_mode = 2
text = "Outline:"

[node name="OutlineButtons" type="ColorPickerButton" parent="VBoxContainer/Outline"]
layout_mode = 2
text = "Team
"

[connection signal="button_down" from="VBoxContainer/MenuButton" to="." method="_on_menu_button_button_down"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="color_changed" from="VBoxContainer/Primary/PrimaryButton" to="." method="_on_primary_button_color_changed"]
[connection signal="color_changed" from="VBoxContainer/Primary/PrimaryButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="color_changed" from="VBoxContainer/Box/BoxButton" to="." method="_on_box_button_color_changed"]
[connection signal="color_changed" from="VBoxContainer/Box/BoxButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="color_changed" from="VBoxContainer/Outline/OutlineButtons" to="." method="_on_outline_buttons_color_changed"]
[connection signal="color_changed" from="VBoxContainer/Outline/OutlineButtons" to="." method="_on_color_picker_button_color_changed"]
